# fast_fs_scrutinizer

./: .gitignore  CMakeLists.txt
src/: main.cpp
